--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
         </ul>
 
         <div class="social-links">
-          <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/MuhamadHamzah" target="_blank"><i class="fab fa-github"></i></a>
           <a
             href="https://www.instagram.com/mhmdhmzza?igsh=bWx4aHVtcHRhanhu"
             target="_blank"
@@ -73,7 +73,7 @@
                 <br />
                 <span class="style"> MY PORTOFOLIO </span>
               </h1>
-              <div class="cta-buttons">
+              <div class="cta-buttons"> 
                 <a href="#projects" class="btn lihat">View My Work</a>
                 <a href="#contact" class="btn kontak">Contact Me</a>
               </div>
@@ -333,12 +333,12 @@
 
                 <div class="project-item" data-category="other">
                   <div class="project-img">
-                    <img src="/app/img/sertif_c++.png" alt="Certificate" />
-                  </div>
-                  <div class="project-info">
                     <a
                       href="https://drive.google.com/file/d/1lwpqLjGkKDcDpJaNqzyVkxfct7Aj6g_O/view?usp=drivesdk"
                     >
+                    <img src="/app/img/sertif_c++.png" alt="Certificate" />
+                  </div>
+                  <div class="project-info">
                       <h3>Certificate - Memulai Pemrograman Dengan C</h3>
                       <p>
                         The "Starting Programming With C" certificate I got at
