--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./src/styles.css" />
-    <link rel="icon website" href="/app/img/icon_port.png" />
+    <link rel="icon website" href="img/icon_port.png" />
   </head>
   <body>
     <div class="portfolio-container">
@@ -17,7 +17,7 @@
       <nav class="sidebar">
         <div class="sidebar-header">
           <div class="profile-pic">
-            <img src="/app/img/my-picture.jpg" alt="Profile Picture" />
+            <img src="img/my-picture.jpg" alt="Profile Picture" />
           </div>
           <h2 class="name">Muhamad Hamzah</h2>
           <p class="title"><span></span></p>
@@ -86,7 +86,7 @@
               <h2 class="section-title">About Me</h2>
               <div class="about-content">
                 <div class="about-image">
-                  <img src="/app/img/my-picture.jpg" alt="About Me" />
+                  <img src="img/my-picture.jpg" alt="About Me" />
                 </div>
                 <div class="about-text">
                   <p>Muhamad Hamzah - Web Developer</p>
@@ -273,7 +273,7 @@
                 <div class="project-item" data-category="web">
                   <div class="project-img">
                     <img
-                      src="/app/img/ForYou.png"
+                      src="img/ForYou.png"
                       alt="ForYou - Apps Website"
                     />
                   </div>
@@ -315,7 +315,7 @@
 
                 <div class="project-item" data-category="web">
                   <div class="project-img">
-                    <img src="/app/img/portofolio.png" alt="Portofolio" />
+                    <img src="img/portofolio.png" alt="Portofolio" />
                   </div>
                   <div class="project-info">
                     <h3>Portfolio Website</h3>
@@ -336,7 +336,7 @@
                     <a
                       href="https://drive.google.com/file/d/1lwpqLjGkKDcDpJaNqzyVkxfct7Aj6g_O/view?usp=drivesdk"
                     >
-                    <img src="/app/img/sertif_c++.png" alt="Certificate" />
+                    <img src="img/sertif_c++.png" alt="Certificate" />
                   </div>
                   <div class="project-info">
                       <h3>Certificate - Memulai Pemrograman Dengan C</h3>
