--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="stylesheet" href="./css/skill.css" />
     <link rel="icon website" href="img/icon_port.png" />
   </head>
   <body>
@@ -139,35 +140,35 @@
                 <div class="skills-category">
                   <h3>Frontend Development</h3>
                   <div class="skills-grid">
-                    <div class="skill-item">
-                      <div class="skill-icon">
-                        <i class="fab fa-html5"></i>
+                    <div class="skill-item" id="html-item">
+                      <div class="skill-icon" id="html-skill" >
+                        <i class="fab fa-html5" ></i>
                       </div>
                       <h4>HTML5</h4>
-                      <div class="skill-bar">
-                        <div class="skill-level" style="width: 95%"></div>
+                      <div class="skill-bar" id="html">
+                        <div class="skill-level"  style="width: 95%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
+                    <div class="skill-item" id="css-skill">
                       <div class="skill-icon">
                         <i class="fab fa-css3-alt"></i>
                       </div>
                       <h4>CSS3</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="css-bar">
                         <div class="skill-level" style="width: 90%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
+                    <div class="skill-item" id="js-skill">
                       <div class="skill-icon"><i class="fab fa-js"></i></div>
                       <h4>JavaScript</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="js-bar">
                         <div class="skill-level" style="width: 50%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
-                      <div class="skill-icon"><i class="fab fa-react"></i></div>
+                    <div class="skill-item" id="react-item">
+                      <div class="skill-icon" id="react-skill"><i class="fab fa-react"></i></div>
                       <h4>React</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="react-bar">
                         <div class="skill-level" style="width: 10%"></div>
                       </div>
                     </div>
@@ -177,37 +178,37 @@
                 <div class="skills-category">
                   <h3>Backend Development</h3>
                   <div class="skills-grid">
-                    <div class="skill-item">
-                      <div class="skill-icon">
+                    <div class="skill-item" id="node-item" >
+                      <div class="skill-icon" id="node-skill">
                         <i class="fab fa-node-js"></i>
                       </div>
                       <h4>Node.js</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="node-bar">
                         <div class="skill-level" style="width: 10%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
-                      <div class="skill-icon">
+                    <div class="skill-item" id="mysql-item">
+                      <div class="skill-icon" id="mysql-skill">
                         <i class="fas fa-database"></i>
                       </div>
                       <h4>MySql</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="mysql-bar">
                         <div class="skill-level" style="width: 50%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
-                      <div class="skill-icon">
+                    <div class="skill-item" id="server-item">
+                      <div class="skill-icon" id="server-skill">
                         <i class="fas fa-server"></i>
                       </div>
                       <h4>Express</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="server-bar">
                         <div class="skill-level" style="width: 0%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
-                      <div class="skill-icon"><i class="fas fa-fire"></i></div>
+                    <div class="skill-item" id="firebase-item">
+                      <div class="skill-icon" id="firebase-skill"> <i class="fas fa-fire"></i></div>
                       <h4>Firebase</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="firebase-bar">
                         <div class="skill-level" style="width: 0%"></div>
                       </div>
                     </div>
@@ -217,37 +218,37 @@
                 <div class="skills-category">
                   <h3>Tools & Others</h3>
                   <div class="skills-grid">
-                    <div class="skill-item">
-                      <div class="skill-icon">
+                    <div class="skill-item" id="git-item">
+                      <div class="skill-icon" id="git-skill">
                         <i class="fab fa-git-alt"></i>
                       </div>
                       <h4>Git</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="git-bar">
                         <div class="skill-level" style="width: 75%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
+                    <div class="skill-item" id="figma-skill">
                       <div class="skill-icon"><i class="fab fa-figma"></i></div>
                       <h4>Figma</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="figma-bar">
                         <div class="skill-level" style="width: 20%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
-                      <div class="skill-icon">
+                    <div class="skill-item" id="respon-item">
+                      <div class="skill-icon" id="respon-skill">
                         <i class="fas fa-mobile-alt"></i>
                       </div>
                       <h4>Responsive Design</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="respon-bar">
                         <div class="skill-level" style="width: 90%"></div>
                       </div>
                     </div>
-                    <div class="skill-item">
-                      <div class="skill-icon">
+                    <div class="skill-item" id="forma-item">
+                      <div class="skill-icon" id="forma-skill">
                         <i class="fas fa-tachometer-alt"></i>
                       </div>
                       <h4>Performance</h4>
-                      <div class="skill-bar">
+                      <div class="skill-bar" id="forma-bar">
                         <div class="skill-level" style="width: 80%"></div>
                       </div>
                     </div>
@@ -383,7 +384,7 @@
                     </div>
                     <div class="contact-text">
                       <h3>Phone</h3>
-                      <p>+62 852-504-4971</p>
+                      <p>+62 852-7504-4971</p>
                     </div>
                   </div>
                 </div>
