perubahan html & css skill

--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,7 @@
                       </div>
                       <h4>HTML5</h4>
                       <div class="skill-bar" id="html">
-                        <div class="skill-level"  style="width: 95%"></div>
+                        <div class="skill-level" ></div>
                       </div>
                     </div>
                     <div class="skill-item" id="css-skill">
@@ -155,21 +155,21 @@
                       </div>
                       <h4>CSS3</h4>
                       <div class="skill-bar" id="css-bar">
-                        <div class="skill-level" style="width: 90%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="js-skill">
                       <div class="skill-icon"><i class="fab fa-js"></i></div>
                       <h4>JavaScript</h4>
                       <div class="skill-bar" id="js-bar">
-                        <div class="skill-level" style="width: 50%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="react-item">
                       <div class="skill-icon" id="react-skill"><i class="fab fa-react"></i></div>
                       <h4>React</h4>
                       <div class="skill-bar" id="react-bar">
-                        <div class="skill-level" style="width: 10%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                   </div>
@@ -184,7 +184,7 @@
                       </div>
                       <h4>Node.js</h4>
                       <div class="skill-bar" id="node-bar">
-                        <div class="skill-level" style="width: 10%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="mysql-item">
@@ -193,7 +193,7 @@
                       </div>
                       <h4>MySql</h4>
                       <div class="skill-bar" id="mysql-bar">
-                        <div class="skill-level" style="width: 50%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="server-item">
@@ -202,14 +202,14 @@
                       </div>
                       <h4>Express</h4>
                       <div class="skill-bar" id="server-bar">
-                        <div class="skill-level" style="width: 0%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="firebase-item">
                       <div class="skill-icon" id="firebase-skill"> <i class="fas fa-fire"></i></div>
                       <h4>Firebase</h4>
                       <div class="skill-bar" id="firebase-bar">
-                        <div class="skill-level" style="width: 0%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                   </div>
@@ -224,14 +224,14 @@
                       </div>
                       <h4>Git</h4>
                       <div class="skill-bar" id="git-bar">
-                        <div class="skill-level" style="width: 75%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="figma-skill">
                       <div class="skill-icon"><i class="fab fa-figma"></i></div>
                       <h4>Figma</h4>
                       <div class="skill-bar" id="figma-bar">
-                        <div class="skill-level" style="width: 20%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="forma-item">
@@ -240,7 +240,7 @@
                       </div>
                       <h4>Performance</h4>
                       <div class="skill-bar" id="forma-bar">
-                        <div class="skill-level" style="width: 80%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                     <div class="skill-item" id="respon-item">
@@ -249,7 +249,7 @@
                       </div>
                       <h4>Responsive Design</h4>
                       <div class="skill-bar" id="respon-bar">
-                        <div class="skill-level" style="width: 90%"></div>
+                        <div class="skill-level"></div>
                       </div>
                     </div>
                   </div>
